# quanti-lims-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  REVIEW.md  app.py  calculation_modes.py  config.py  docker-compose.yml  init_db.py  models.py  praktikum.py  pyproject.toml  quanti_lims.db  reagent_expansion.py  requirements.txt
.claude/: settings.local.json
migrations/: 20260316_method_reagent_amount_fields.sql  20260316_method_titrant_consistency.sql  20260317_move_e_ab_ps_g_to_method.sql
migrations/legacy_sql/: 20260316_analysis_reference_fields.sql  20260316_method_weighing_basis.sql  20260317_method_aliquot_fields.sql  20260320_mass_det_fields.sql  20260321_add_n_crystal_water_to_analysis.sql  20260321_add_p_hydrate_min_pct_to_method.sql  (+1 more)
static/: style.css
templates/: base.html  dashboard.html  home.html  macros.html
tests/: conftest.py  test_aliquot_enabled.py  test_assignment.py  test_attempt_type.py  test_auto_groups.py  test_batch_creation_fallback.py  test_batch_defaults_api.py  test_block_admin.py  test_colloquium.py  test_evaluation_label.py  test_group_rotation.py  test_hydrate_factor.py  test_loss_on_drying.py  test_mass_determination.py  test_migrations.py  test_navigation.py  test_practical_day.py  test_practical_day_routes.py  test_praktikum_resolution.py  test_protocol_check.py  test_reagent_demand.py  test_reagent_expansion.py  test_reported_component.py  test_rotation_overview_routes.py  test_student_group.py  test_submit_ctx.py  test_tagesansicht_routes.py  test_tolerance.py  test_utils.py  test_weighing_limits.py
(+90 files in other folders)
